# finita

./: .gitignore  .gitmodules  CMakePresets.json  GIT.md  GNUmakefile  finita.code-workspace  finita.gemspec  problem.c  runme.rb
bench/: CMakeLists.txt  c0.c  c0.rb  c1.c  c2.c  c3.c  f1.f90  f2.f90
cmake/: CMakeWorks.cmake
etc/: f1.f90
ext/: .hgsub
lib/: code_builder.rb  data_struct.rb  finita.rb  symbolic.rb
lib/finita/: backend.rb  cartesian.rb  cell.rb  common.rb  coordinate.rb  core.rb  cubic.rb  decomposer.rb  discretizer.rb  domain.rb  environment.rb  equation.rb  evaluator.rb  evaluator_code.rb  field.rb  field_code.rb  generator.rb  grid.rb  grid2.rb  grid3.rb  jacobian.rb  lhs.rb  mapper.rb  matrix.rb  module.rb  nodes.rb  orderer.rb  ordering.rb  problem.rb  residual.rb  rhs.rb  solver.rb  symbolic.rb  system.rb  type.rb  workload.rb
lib/finita/grid/: cartesian.rb
lib/finita/jacobian/: numeric.rb
lib/finita/mapper/: naive.rb
lib/finita/module/: finite_volume.rb  generic_domain.rb
lib/finita/solver/: explicit.rb  lis.rb  mumps.rb  paralution.rb  petsc.rb  viennacl.rb
sample/: CMakeLists.txt  bratu.c  bratu.rb  cavity.c  cavity.rb  ctrxy.c  ctrxy.rb  finita-v1-sample.code-workspace  poisson.c  poisson.rb  rmf.c  rmf.rb  tmf.c  tmf.rb  tmfd.c  tmfd.rb
src/finita/: finita.rb
src/finita/finita/: backend.rb  cell.rb  common.rb  coordinate.rb  discretizer.rb  equation.rb  generator.rb  problem.rb  symbolic.rb  system.rb
src/support/: c_data_struct.rb  code_builder.rb  data_struct.rb  symbolic.rb
test/: CMakeLists.txt  CMakePresets.json  c_data_struct_test.c  c_data_struct_test.rb  data_struct_test.c  data_struct_test.rb  field_code_test.c  field_code_test.rb  finita-test.code-workspace  finita.c  finita.rb  symbolic_test.rb  test.c  test.rb
test/cmake/: AutoC.cmake
tmp/: CMakeLists.txt  Problem.c  Problem.rb  Problem.sh  test.c  test.rb
tmp/cmake/: CMakeWorks.cmake
win32/: README.txt  build.sh  finita.iss  finitac.cmd  prepare.cmd
